--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+    <div><a href="#">Home</a></div>
+    <div><a href="#">About Us</a>
+    </div>
+    <div><a href="#">Contact us</a></div>
+   </nav>
+   <h1>3 random images</h1>
+    <ul>
+        <li><img src="https://picsum.photos/id/123/200/300" alt="image of droplets"></li>
+        <li><img src="https://picsum.photos/id/124/200/300" alt="river"></li>
+        <li><img src="https://picsum.photos/id/125/200/300" alt="farm"></li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
